@@ -1,0 +1,9 @@
+.. comment: generated by t_lint_assigneqexpr_bad
+.. code-block:: sv
+   :linenos:
+   :emphasize-lines: 3
+
+     assign d_o =  // Note = not == below
+         (
+         c_o = 1  // <--- Warning: ASSIGNEQEXPR
+         ) ? 1 : (
