@@ -1,0 +1,5 @@
+.. comment: generated by t_lint_assigneqexpr_bad
+.. code-block::
+
+   %Warning-ASSIGNEQEXPR: example.v:1:11 Assignment '=' inside expression
+                                                       : ... Was a '==' intended, or suggest use a separate statement
